Replace current_user with current_profile

--- a/app/views/pages/dashboard/groups/create.liquid
+++ b/app/views/pages/dashboard/groups/create.liquid
@@ -3,11 +3,11 @@ slug: dashboard/groups
 method: post
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function object = 'lib/commands/groups/create', object: context.params.group, owner_id: current_user.id
+  function object = 'lib/commands/groups/create', object: context.params.group, owner_id: current_profile.id
   if object.valid
-    include 'lib/commands/events/create', type: 'group_created', actor_id: current_user.id, object_id: object.id
+    include 'lib/commands/events/create', type: 'group_created', actor_id: current_profile.id, object_id: object.id
     include 'redirect_to', url: '/dashboard/groups'
   else
     graphql presigned_url = 'photos/presign' | dig: 'presigned'
