--- a/app/views/partials/lib/commands/comments/create.liquid
+++ b/app/views/partials/lib/commands/comments/create.liquid
@@ -1,5 +1,5 @@
 {%  liquid
-  function object = 'lib/commands/comments/create/build', object: object, current_user: current_user
+  function object = 'lib/commands/comments/create/build', object: object, current_profile: current_profile
   function object = 'lib/commands/comments/create/check', object: object
 
   if object.valid
