--- a/app/views/partials/theme/simple/groups/nav.liquid
+++ b/app/views/partials/theme/simple/groups/nav.liquid
@@ -12,6 +12,6 @@
       </a>
     </div>
     <div class="flex items-center mr-3">
-      {% render 'theme/simple/groups/join_button', group: group, current_user: current_user %}
+      {% render 'theme/simple/groups/join_button', group: group, current_profile: current_profile %}
     </div>
   </nav>
