--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -15,7 +15,7 @@
         </a>
       </h2>
       <div class="flex flex-wrap items-center ">
-        {% render 'theme/simple/follow_button', current_user: current_user, user: user %}
+        {% render 'theme/simple/follow_button', current_profile: current_profile, user: user %}
         <span class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none text-gray-600 lg:ml-auto md:ml-0" title="Following">
           <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"> <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path> <circle cx="12" cy="12" r="3"></circle> </svg>
           1.2K
