--- a/app/views/pages/admin/activities/index.liquid
+++ b/app/views/pages/admin/activities/index.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   include 'lib/must_be_superadmin'
 
   assign feed = context.params.feed | split: '.'
@@ -21,7 +21,7 @@
   function selected = 'lib/data/queries/profiles/find', id: feed_id
 
   include 'theme/simple/admin/menu', section: 'activities'
-  include 'theme/simple/admin/activities/index', list: list, section: 'activities', users: users, current_user: current_user, selected: selected
+  include 'theme/simple/admin/activities/index', list: list, section: 'activities', users: users, current_profile: current_profile, selected: selected
 
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
