--- a/app/views/pages/api/photos/create.json.liquid
+++ b/app/views/pages/api/photos/create.json.liquid
@@ -3,8 +3,8 @@ slug: api/photos
 method: post
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
-  function object = 'lib/commands/photos/create', object: context.params.photo, current_user: current_user
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function object = 'lib/commands/photos/create', object: context.params.photo, current_profile: current_profile
 
   include 'theme/json/shared/show', object: object
 %}
