--- a/app/views/pages/comments/create.liquid
+++ b/app/views/pages/comments/create.liquid
@@ -3,12 +3,12 @@ slug: comments
 method: post
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function object = 'lib/commands/comments/create', object: context.params.comment, current_user: current_user
+  function object = 'lib/commands/comments/create', object: context.params.comment, current_profile: current_profile
 
   if object.valid
-    include 'lib/commands/events/create', type: 'comment_created', actor_id: current_user.id, object_id: object.id, target_id: context.params.comment.commentable_id, delay: 0
+    include 'lib/commands/events/create', type: 'comment_created', actor_id: current_profile.id, object_id: object.id, target_id: context.params.comment.commentable_id, delay: 0
     redirect_to context.params.return_to
   else
     echo object
