--- a/app/views/pages/dashboard/items/create.liquid
+++ b/app/views/pages/dashboard/items/create.liquid
@@ -2,11 +2,11 @@
 method: post
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function object = 'lib/commands/items/create', object: context.params.item, owner: current_user.id
+  function object = 'lib/commands/items/create', object: context.params.item, owner: current_profile.id
   if object.valid
-    include 'lib/commands/events/create', type: 'item_created', actor_id: current_user.id, object_id: object.id
+    include 'lib/commands/events/create', type: 'item_created', actor_id: current_profile.id, object_id: object.id
 
     function url = 'link_to', item: object
     include 'redirect_to', url: url, notice: 'app.items.created'
