--- a/app/views/pages/dashboard/items/edit.liquid
+++ b/app/views/pages/dashboard/items/edit.liquid
@@ -6,7 +6,7 @@ metadata:
     - label: app.edit
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function_rc item = 'lib/data/queries/items/find', id: params.id
 
@@ -15,7 +15,7 @@ metadata:
     break
   endunless
 
-  include 'lib/can_edit', user_id: current_user.id, item: item
+  include 'lib/can_edit', user_id: current_profile.id, item: item
 
   function_rc filters = 'lib/data/queries/search/filters'
   function_rc presigned_url = 'lib/data/queries/presigned_url'
