--- a/app/views/pages/dashboard/profile/update.liquid
+++ b/app/views/pages/dashboard/profile/update.liquid
@@ -3,9 +3,9 @@ slug: dashboard/profile
 method: put
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function object = 'lib/commands/profiles/update', object: context.params.profile, profile: current_user
+  function object = 'lib/commands/profiles/update', object: context.params.profile, profile: current_profile
   if object.valid
     include 'lib/commands/events/create', type: 'profile_updated', actor_id: object.id
     include 'redirect_to', url: '/dashboard'
