--- a/app/views/pages/dashboard/sell/items/index.liquid
+++ b/app/views/pages/dashboard/sell/items/index.liquid
@@ -4,9 +4,9 @@ metadata:
     - label: app.items.list
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function_rc items = 'lib/data/queries/items/search', limit: 100, owner: current_user.id
+  function_rc items = 'lib/data/queries/items/search', limit: 100, owner: current_profile.id
 
   include 'theme/simple/dashboard/breadcrumbs', name: 'items', total_entries: items.total_entries, role: 'seller'
   include 'theme/simple/dashboard/items/index', items: items, role: 'seller'
