--- a/app/views/pages/dashboard/sell/orders/index.liquid
+++ b/app/views/pages/dashboard/sell/orders/index.liquid
@@ -5,7 +5,7 @@ metadata:
     - label: app.orders.list
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function orders = 'lib/data/queries/orders/search', limit: 100, seller: current_user.id
 
