--- a/app/views/pages/groups/about.liquid
+++ b/app/views/pages/groups/about.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
 
   assign group_id = context.params.slug3 | split: '-' | last
   function_rc group = 'lib/data/queries/groups/find', id: group_id, with_owner: true
@@ -7,6 +7,6 @@
 
   function list = 'lib/data/queries/relationships/search', limit: 4, name: 'membership', r_id: group_id
 
-  include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'about', list: list
+  include 'theme/simple/groups/show', group: group, current_profile: current_profile, tab: 'about', list: list
   render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
