--- a/app/views/pages/groups/index.liquid
+++ b/app/views/pages/groups/index.liquid
@@ -2,10 +2,10 @@
 slug: groups
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
 
   function list = 'lib/data/queries/groups/search', limit: 100
 
-  include 'theme/simple/groups/cards', current_user: current_user, list: list
+  include 'theme/simple/groups/cards', current_profile: current_profile, list: list
   render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
