--- a/app/views/pages/groups/members.liquid
+++ b/app/views/pages/groups/members.liquid
@@ -1,16 +1,13 @@
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
 
   assign group_id = context.params.slug3 | split: '-' | last
   function_rc group = 'lib/data/queries/groups/find', id: group_id, with_owner: false
-  unless group.id
-    render 'theme/simple/404', status: 404
-    break
-  endunless
+  include 'lib/present_or_404', property: group.id
 
   function list = 'lib/data/queries/relationships/search', limit: 20, name: 'membership', r_id: group_id
 
-  include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'members', list: list, context: context
+  include 'theme/simple/groups/show', group: group, current_profile: current_profile, tab: 'members', list: list, context: context
   render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
