--- a/app/views/pages/groups/show.liquid
+++ b/app/views/pages/groups/show.liquid
@@ -2,7 +2,7 @@
 slug: groups/show
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
 
   assign group_id = context.params.slug3 | split: '-' | last
   function group = 'lib/data/queries/groups/find', id: group_id, with_owner: true
@@ -11,6 +11,6 @@ slug: groups/show
   function list = 'lib/data/queries/activities/search', feed: 'group-public', feed_id: group.id, limit: 100
   function presigned_url = 'lib/data/queries/presigned_url'
 
-  include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'activity', list: list, context: context, presigned_url: presigned_url
+  include 'theme/simple/groups/show', group: group, current_profile: current_profile, tab: 'activity', list: list, context: context, presigned_url: presigned_url
   render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
