--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, followships: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, followships: true
 
   function items = 'lib/data/queries/activities/search', feed: 'system', feed_id: "5", limit: 3
   function comments = 'lib/data/queries/activities/search', feed: 'system', feed_id: "2", limit: 3
@@ -12,6 +12,6 @@
   hash_assign feeds['groups'] = groups
   hash_assign feeds['profiles'] = profiles
 
-  include 'theme/simple/home/index', feeds: feeds, current_user: current_user
+  include 'theme/simple/home/index', feeds: feeds, current_profile: current_profile
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
