--- a/app/views/pages/items/index.liquid
+++ b/app/views/pages/items/index.liquid
@@ -3,13 +3,13 @@ slug: search
 ---
 
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
 
   function query = 'lib/data/queries/items/search/build', query: context.params, limit: 50
   function items = 'lib/data/queries/items/search/execute', query: query
 
   function filters = 'lib/data/queries/search/filters', query: context.params
 
-  include 'theme/simple/items/index', items: items, filters: filters, current_user: current_user
+  include 'theme/simple/items/index', items: items, filters: filters, current_profile: current_profile
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
