--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -3,14 +3,14 @@ slug: items
 ---
 
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, followships: true
-  include 'lib/validate_profile_completeness', profile: current_user
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, followships: true
+  include 'lib/validate_profile_completeness', profile: current_profile
 
   assign id = context.params.slug2 | split: '-' | last
   function item = 'lib/data/queries/items/find', id: id
 
   include 'lib/present_or_404', property: item.id
 
-  render 'theme/simple/items/show', item: item, current_user: current_user, authenticity_token: context.authenticity_token
+  render 'theme/simple/items/show', item: item, current_profile: current_profile, authenticity_token: context.authenticity_token
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
