--- a/app/views/pages/order_statuses/create.liquid
+++ b/app/views/pages/order_statuses/create.liquid
@@ -4,8 +4,8 @@ slug: order_statuses/create
 ---
 
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
-  function_rc object = 'lib/commands/order_statuses/create', order_id: context.params.order_id, current_user_id: current_user.id, name: context.params.status
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function_rc object = 'lib/commands/order_statuses/create', order_id: context.params.order_id, current_user_id: current_profile.id, name: context.params.status
 
   if object.valid
       include "redirect_to", url: "/dashboard", notice: 'app.orders.status.updated'
