--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -3,13 +3,13 @@ method: post
 ---
 
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function item = 'lib/data/queries/items/find', id: context.params.item_id
 
-  function object = 'lib/commands/orders/create', item: item, current_user: current_user
+  function object = 'lib/commands/orders/create', item: item, current_profile: current_profile
   if object.valid
-    function status = 'lib/commands/order_statuses/create', order: object, current_user_id: current_user.id, name: 'app.order_statuses.placed'
+    function status = 'lib/commands/order_statuses/create', order: object, current_user_id: current_profile.id, name: 'app.order_statuses.placed'
 
     include 'lib/commands/events/create', type: 'order_created', actor_id: object.buyer.id, target_id: context.params.item_id, object_id: object.id
 
