--- a/app/views/pages/users/listing.liquid
+++ b/app/views/pages/users/listing.liquid
@@ -2,7 +2,7 @@
 slug: u
 ---
 {% liquid
-  function current_user = 'lib/current_profile', user_id: context.current_user.id
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id
   function user = 'lib/data/queries/profiles/find', id: context.params.slug2
 
   if user == blank
@@ -13,6 +13,6 @@ slug: u
   function items = 'lib/data/queries/items/search', query: context.params, limit: 50, owner: user.id
   function filters = 'lib/data/queries/search/filters', query: context.params
 
-  include 'theme/simple/users/listing', items: items, filters: filters, user: user, current_user: current_user
+  include 'theme/simple/users/listing', items: items, filters: filters, user: user, current_profile: current_profile
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
