--- a/app/views/partials/theme/simple/activities/feed/index.liquid
+++ b/app/views/partials/theme/simple/activities/feed/index.liquid
@@ -1,15 +1,15 @@
 <p>
-  {{ current_user.name }}'s Private Activity Feed
+  {{ current_profile.name }}'s Private Activity Feed
 </p>
 
 <div class="w-full mt-2">
   {%
-    include 'theme/simple/comments/new_entry', commentable: current_user, commentable_type: 'profile', placeholder: "What's new?", presigned_url: presigned_url
+    include 'theme/simple/comments/new_entry', commentable: current_profile, commentable_type: 'profile', placeholder: "What's new?", presigned_url: presigned_url
   %}
 
   <div class="my-6">
     {% for record in list.results %}
-      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user %}
+      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_profile: current_profile %}
     {% else %}
       <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
     {% endfor %}
