--- a/app/views/partials/theme/simple/admin/activities/index.liquid
+++ b/app/views/partials/theme/simple/admin/activities/index.liquid
@@ -30,7 +30,7 @@
 
   <div class="my-5">
     {% for record in list.results %}
-      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user %}
+      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_profile: current_profile %}
     {% endfor %}
   </div>
 
