--- a/app/views/partials/theme/simple/home/card.liquid
+++ b/app/views/partials/theme/simple/home/card.liquid
@@ -29,7 +29,7 @@
         </p>
 
         <h3 class="mb-1 text-xs">
-          {% render 'theme/simple/business_card', user: actor, current_user: current_user %}
+          {% render 'theme/simple/business_card', user: actor, current_profile: current_profile %}
         </h3>
       </div>
     </div>
