--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -34,7 +34,7 @@
 
     <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
       <h2 class="text-sm tracking-widest ">
-        {% render 'theme/simple/business_card', user: item.owner, current_user: current_user %}
+        {% render 'theme/simple/business_card', user: item.owner, current_profile: current_profile %}
         <a href="/u/{{ item.owner.id }}">{% print 'app.items.by_user' | t %}</a>
       </h2>
 
@@ -78,7 +78,7 @@
         </form>
       </div>
 
-        {%- if item.owner.id == current_user.id and item.orders.size < 1 %}
+        {%- if item.owner.id == current_profile.id and item.orders.size < 1 %}
         <p class="py-4 mt-4 border-t border-blue-300">Item Administration</p>
         <span class="flex">
           <a href="/dashboard/items/edit?id={{ item.id }}" class="button">Edit</a>
