--- a/app/views/partials/theme/simple/profile/activity_new.liquid
+++ b/app/views/partials/theme/simple/profile/activity_new.liquid
@@ -1,3 +1,3 @@
 {% liquid
-  include 'theme/simple/comments/new_entry', commentable: current_user, commentable_type: 'profile', placeholder: "What's new?"
+  include 'theme/simple/comments/new_entry', commentable: current_profile, commentable_type: 'profile', placeholder: "What's new?"
 %}
