--- a/app/views/partials/theme/simple/profile/sections/followers.liquid
+++ b/app/views/partials/theme/simple/profile/sections/followers.liquid
@@ -1,7 +1,7 @@
 <section class="container mx-auto">
   <div class="flex flex-wrap -mx-4">
     {% for record in list.results %}
-      {% render 'theme/simple/profile/user_card', user: record.l, current_user: current_user %}
+      {% render 'theme/simple/profile/user_card', user: record.l, current_profile: current_profile %}
     {% else %}
       <p class="container mx-4 my-8 text-lg">{{ 'app.no_followers_found' | t }}</p>
     {% endfor %}
