--- a/app/views/partials/theme/simple/profile/sections/following.liquid
+++ b/app/views/partials/theme/simple/profile/sections/following.liquid
@@ -1,7 +1,7 @@
 <section>
   <div class="flex flex-wrap -mx-4">
     {% for relation in list.results %}
-      {% render 'theme/simple/profile/user_card', user: relation.r, current_user: current_user %}
+      {% render 'theme/simple/profile/user_card', user: relation.r, current_profile: current_profile %}
     {% else %}
       <p class="container mx-4 my-8 text-lg">{{ 'app.no_following_found' | t }}</p>
     {% endfor %}
