--- a/app/views/partials/theme/simple/users/listing.liquid
+++ b/app/views/partials/theme/simple/users/listing.liquid
@@ -1,6 +1,6 @@
 <form action="/u/{{ user.id }}" name="search">
   {% include 'theme/simple/home/search_form', query: search.query, filters: filters %}
-  {% if current_user.id == user.id %}
+  {% if current_profile.id == user.id %}
   <p>{{ 'app.items.self-list' | t }}</p>
   {% else %}
   <p>{{ 'app.items.user-list' | t: name: user.name, id: user.id }}</p>
