--- a/app/views/partials/theme/simple/groups/activity.liquid
+++ b/app/views/partials/theme/simple/groups/activity.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  if current_user.id
+  if current_profile.id
     include 'theme/simple/comments/new_entry', commentable: group, commentable_type: 'group', placeholder: "What's new?"
   endif
 %}
@@ -7,7 +7,7 @@
 <section class="text-gray-900 body-font">
   <div class="grid grid-cols-1 gap-6 my-6 md:px-5 md:py-5">
     {% for record in list.results %}
-      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user %}
+      {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_profile: current_profile %}
     {% else %}
       <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
     {% endfor %}
