--- a/app/views/partials/theme/simple/comments/new_entry.liquid
+++ b/app/views/partials/theme/simple/comments/new_entry.liquid
@@ -9,27 +9,18 @@
   <input type="hidden" name="comment[uuid]" value="{{ uuid }}" />
   <input type="hidden" name="return_to" value="{{ context.location.pathname }}" />
 
-  <div class="p-5 bg-gray-200 rounded-lg shadow">
+  <div class="p-5">
     <div class="relative">
-      <textarea name="comment[body]" class="w-full p-2 bg-white border border-gray-700 rounded-lg" rows="3" placeholder="{{ placeholder }}"></textarea>
+      <textarea name="comment[body]" class="w-full p-2 bg-white border border-gray-700 rounded-lg outline-none" rows="3" placeholder="{{ placeholder }}"></textarea>
+
       <div data-comment-photo-upload class="absolute top-0 right-0 w-8 h-8 mt-5 mr-5 text-gray-600 cursor-pointer" title="images">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" /> </svg>
       </div>
     </div>
     {% render 'theme/simple/photos/uppy_area', class: "hidden mt-5" %}
 
-    <div class="flex flex-row flex-wrap w-full mt-3">
-      <div class="w-1/3">
-        <!--
-          <select class="float-left w-full p-2 bg-gray-200 border rounded-lg shadow">
-            <option>Public</option>
-            <option>Private</option>
-          </select>
-        -->
-      </div>
-      <div class="w-2/3">
-        <button type="submit" class="float-right button">Send</button>
-      </div>
+    <div class="flex mt-3">
+      <button type="submit" class="ml-auto text-lg button button-secondary">Send</button>
     </div>
   </div>
 </form>
