--- a/app/views/partials/theme/simple/dashboard/groups/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/index.liquid
@@ -32,7 +32,7 @@
                 </a>
               </td>
               <td class="px-6 py-4 border-b border-grey-light">
-                <a href="/groups/show/{ group.id }}">
+                <a href="/groups/show/{{ group.id }}">
                   {{ group.name }}
                 </a>
               </td>
