--- a/app/views/partials/theme/simple/dashboard/groups/new.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/new.liquid
@@ -1,5 +1,3 @@
-<div class="container flex flex-wrap items-center mx-auto">
-  <h1 class="text-2xl">New Group</h1>
-</div>
+<h1 class="mb-3 text-2xl">New Group</h1>
 
 {% include 'theme/simple/dashboard/groups/form', group: group %}
