--- a/app/views/partials/theme/simple/dashboard/sidebar.liquid
+++ b/app/views/partials/theme/simple/dashboard/sidebar.liquid
@@ -37,7 +37,7 @@
       </button>
 
       <div>
-        {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/sell/orders", label: 'app.your-orders' %}
+        {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/sell/orders", label: 'app.p-dashboard.sell-orders' %}
         {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/sell/items", label: 'app.p-dashboard.items-for-sell' %}
         {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/items/new", label: 'app.p-dashboard.list-an-item' %}
       </div>
@@ -53,7 +53,7 @@
       </button>
 
       <div>
-        {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/buy/orders", label: 'app.your-orders' %}
+        {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/buy/orders", label: 'app.p-dashboard.buy-orders' %}
         {% include 'theme/simple/dashboard/sidebar_link', href: "/search", label: 'app.p-dashboard.items-to-buy' %}
       </div>
     </div>
@@ -82,6 +82,7 @@
       </button>
 
       <div>
+        {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard", label: 'app.p-dashboard.your-feed' %}
         {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/groups", label: 'app.p-dashboard.my-groups' %}
       </div>
     </div>
