--- a/app/views/partials/theme/simple/home/hero.liquid
+++ b/app/views/partials/theme/simple/home/hero.liquid
@@ -1,4 +1,4 @@
-<div class="container flex py-6 sm:px-8">
+<div class="container flex py-6 sm:px-8 md:px-0">
   <div class="py-8">
     <p class="mt-8 text-base font-semibold leading-relaxed lg:text-lg">Don't listen to what they say, Go See</p>
     <h1 class="max-w-xl text-3xl font-bold leading-tight lg:text-5xl">Best deals on MVP Marketplace</h1>
