--- a/app/views/partials/theme/simple/groups/join.js.liquid
+++ b/app/views/partials/theme/simple/groups/join.js.liquid
@@ -1,5 +1,5 @@
 <style>
-  button > * { pointer-events: none; }
+  button > * { pointer-events: none }
 
   button:not(.joined) .join { display: visible }
   button:not(.joined) .leave { display: none }
@@ -9,24 +9,24 @@
 </style>
 
 <script>
-  (()=>{
+  (() => {
     const toggleGroupMembership = (action, group_id) => {
       fetch('/api/groups/membership/toggle.json', {
         method: 'POST', // or 'PUT'
         headers: {
-          'Content-Type': 'application/json',
+          'Content-Type': 'application/json'
         },
         body: JSON.stringify({
           group_id: group_id,
           action_name: action,
           authenticity_token: {{ authenticity_token | json }}
-        }),
+        })
       })
         .then(response => response.json())
         .then(data => {
-          console.log('Success:', data);
+          console.log('Success: ', data)
         })
-    }
+    };
 
     const joinButtons = Array.from(document.querySelectorAll('button[data-join-group]'))
     const setButtonState = (button) => button.classList.toggle('joined')
