--- a/app/views/partials/theme/simple/groups/cards.liquid
+++ b/app/views/partials/theme/simple/groups/cards.liquid
@@ -1,14 +1,11 @@
 <h1 class="mb-3 text-2xl font-medium">
   {{ 'app.groups.list' | t }}
 </h1>
-<div class="flex flex-wrap w-full">
-  <section>
-    <div class="container flex flex-wrap">
-      {% for record in list.results %}
-        {% render 'theme/simple/groups/card', group: record, current_profile: current_profile %}
-      {% else %}
-        <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
-      {% endfor %}
-    </div>
-  </section>
+
+<div class="container grid grid-cols-3 gap-5">
+  {% for record in list.results %}
+    {% render 'theme/simple/groups/card', group: record, current_profile: current_profile %}
+  {% else %}
+    <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+  {% endfor %}
 </div>
