--- a/app/views/partials/theme/simple/profile/sections/groups.liquid
+++ b/app/views/partials/theme/simple/profile/sections/groups.liquid
@@ -1,11 +1,7 @@
-<div class="flex flex-wrap w-full">
-  <section>
-    <div class="container flex flex-wrap">
-      {% for record in list.results %}
-        {% render 'theme/simple/groups/card', group: record %}
-      {% else %}
-        <p class="container my-8 text-lg">{{ 'app.no_groups_found' | t }}</p>
-      {% endfor %}
-    </div>
-  </section>
-</div>
+<section class="grid grid-cols-3 gap-5">
+  {% for record in list.results %}
+    {% render 'theme/simple/groups/card', group: record %}
+  {% else %}
+    <p class="text-lg">{{ 'app.no_groups_found' | t }}</p>
+  {% endfor %}
+</section>
