--- a/app/views/partials/lib/data/queries/models/search.liquid
+++ b/app/views/partials/lib/data/queries/models/search.liquid
@@ -1,5 +1,5 @@
 {% liquid
   graphql r = 'models/search', keyword: keyword
-  assign models = r.models
-  return_rc r.models
+  include 'lib/handle_graphql_response', r: r, name: 'quick_search/models'
+  return r.models
 %}
