--- a/app/views/partials/theme/simple/activities/feed_unit.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit.liquid
@@ -1,6 +1,6 @@
 {% assign type = payload.type %}
 
-<div class="px-8 py-6 mb-6 bg-white rounded-lg shadow-md">
+<div class="px-8 py-6 bg-white rounded-lg shadow-md">
   {% render 'theme/simple/activities/feed_unit/header', payload: payload %}
 
   <div class="py-2 leading-snug break-all">
