--- a/app/views/partials/theme/simple/profile/private_feed.liquid
+++ b/app/views/partials/theme/simple/profile/private_feed.liquid
@@ -1,4 +1,4 @@
-<div class="w-full px-4 mb-4 md:mb-0">
+<div class="mb-4 md:mb-0">
   {% liquid
     render 'theme/simple/profile/nav', tab: section, user: current_profile, path: 'dashboard'
 
