--- a/app/views/partials/theme/simple/profile/sections/following.liquid
+++ b/app/views/partials/theme/simple/profile/sections/following.liquid
@@ -1,9 +1,7 @@
-<section>
-  <div class="flex flex-wrap -mx-4">
-    {% for relation in list.results %}
-      {% render 'theme/simple/profile/user_card', user: relation.r, current_profile: current_profile %}
-    {% else %}
-      <p class="container mx-4 my-8 text-lg">{{ 'app.no_following_found' | t }}</p>
-    {% endfor %}
-  </div>
+<section class="grid grid-cols-3 gap-5">
+  {% for relation in list.results %}
+    {% render 'theme/simple/profile/user_card', user: relation.r, current_profile: current_profile %}
+  {% else %}
+    <p class="text-lg">{{ 'app.no_following_found' | t }}</p>
+  {% endfor %}
 </section>
